@@ -1,9 +1,11 @@
 package org.apereo.cas.config;
 
-import net.shibboleth.utilities.java.support.velocity.SLF4JLogChute;
+import lombok.SneakyThrows;
+import lombok.extern.slf4j.Slf4j;
 import net.shibboleth.utilities.java.support.xml.BasicParserPool;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.ClassUtils;
+import org.apache.velocity.app.VelocityEngine;
 import org.apache.velocity.runtime.RuntimeConstants;
 import org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader;
 import org.apache.velocity.runtime.resource.loader.FileResourceLoader;
@@ -20,7 +22,6 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.DependsOn;
 import org.springframework.context.annotation.Lazy;
-import org.springframework.ui.velocity.VelocityEngineFactoryBean;
 
 import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
@@ -35,22 +36,19 @@ import java.util.Properties;
  */
 @Configuration("coreSamlConfiguration")
 @EnableConfigurationProperties(CasConfigurationProperties.class)
+@Slf4j
 public class CoreSamlConfiguration {
-    
+
     private static final int POOL_SIZE = 100;
 
     @Autowired
     private CasConfigurationProperties casProperties;
-    
+
     @Lazy
     @Bean(name = "shibboleth.VelocityEngine")
-    public VelocityEngineFactoryBean velocityEngineFactoryBean() {
-        final VelocityEngineFactoryBean bean = new VelocityEngineFactoryBean();
-
+    public VelocityEngine velocityEngineFactoryBean() {
         final Properties properties = new Properties();
-        properties.put(RuntimeConstants.RUNTIME_LOG_LOGSYSTEM_CLASS, SLF4JLogChute.class.getName());
         properties.put(RuntimeConstants.INPUT_ENCODING, StandardCharsets.UTF_8.name());
-        properties.put(RuntimeConstants.OUTPUT_ENCODING, StandardCharsets.UTF_8.name());
         properties.put(RuntimeConstants.ENCODING_DEFAULT, StandardCharsets.UTF_8.name());
         properties.put(RuntimeConstants.RESOURCE_LOADER, "file, classpath, string");
         properties.put(RuntimeConstants.FILE_RESOURCE_LOADER_PATH, FileUtils.getTempDirectory().getAbsolutePath());
@@ -58,16 +56,16 @@ public class CoreSamlConfiguration {
         properties.put("classpath.resource.loader.class", ClasspathResourceLoader.class.getName());
         properties.put("string.resource.loader.class", StringResourceLoader.class.getName());
         properties.put("file.resource.loader.class", FileResourceLoader.class.getName());
-        bean.setOverrideLogging(false);
-        bean.setVelocityProperties(properties);
-        return bean;
+
+        return new VelocityEngine(properties);
     }
-    
+
     @Bean(name = "shibboleth.OpenSAMLConfig")
     public OpenSamlConfigBean openSamlConfigBean() {
         return new OpenSamlConfigBean(parserPool());
     }
-    
+
+    @SneakyThrows
     @Bean(name = "shibboleth.ParserPool", initMethod = "initialize")
     public BasicParserPool parserPool() {
         final BasicParserPool pool = new BasicParserPool();
@@ -80,24 +78,16 @@ public class CoreSamlConfiguration {
         pool.setNamespaceAware(true);
 
         final Map<String, Object> attributes = new HashMap<>();
-        try {
-            final Class clazz = ClassUtils.getClass(casProperties.getSamlCore().getSecurityManager());
-            attributes.put("http://apache.org/xml/properties/security-manager", clazz.newInstance());
-        } catch (final Exception e) {
-            throw new RuntimeException(e.getMessage(), e);
-        }
+        final Class clazz = ClassUtils.getClass(casProperties.getSamlCore().getSecurityManager());
+        attributes.put("http://apache.org/xml/properties/security-manager", clazz.getDeclaredConstructor().newInstance());
         pool.setBuilderAttributes(attributes);
 
         final Map<String, Boolean> features = new HashMap<>();
         features.put("http://apache.org/xml/features/disallow-doctype-decl", Boolean.TRUE);
-        features.put("http://apache.org/xml/features/validation/schema/normalized-value",
-                Boolean.FALSE);
-        features.put("http://javax.xml.XMLConstants/feature/secure-processing",
-                Boolean.TRUE);
-        features.put("http://xml.org/sax/features/external-general-entities",
-                Boolean.FALSE);
-        features.put("http://xml.org/sax/features/external-parameter-entities",
-                Boolean.FALSE);
+        features.put("http://apache.org/xml/features/validation/schema/normalized-value", Boolean.FALSE);
+        features.put("http://javax.xml.XMLConstants/feature/secure-processing", Boolean.TRUE);
+        features.put("http://xml.org/sax/features/external-general-entities", Boolean.FALSE);
+        features.put("http://xml.org/sax/features/external-parameter-entities", Boolean.FALSE);
         pool.setBuilderFeatures(features);
         return pool;
     }
@@ -109,13 +99,13 @@ public class CoreSamlConfiguration {
         return XMLObjectProviderRegistrySupport.getBuilderFactory();
     }
 
- 
+
     @Bean(name = "shibboleth.MarshallerFactory")
     @DependsOn("shibboleth.OpenSAMLConfig")
     public MarshallerFactory marshallerFactory() {
         return XMLObjectProviderRegistrySupport.getMarshallerFactory();
     }
-    
+
     @Bean(name = "shibboleth.UnmarshallerFactory")
     @DependsOn("shibboleth.OpenSAMLConfig")
     public UnmarshallerFactory unmarshallerFactory() {
