@@ -1,5 +1,7 @@
 package org.apereo.cas;
 
+import lombok.experimental.UtilityClass;
+import lombok.extern.slf4j.Slf4j;
 import org.apereo.cas.util.spring.boot.AbstractCasBanner;
 import org.apereo.cas.util.spring.boot.DefaultCasBanner;
 import org.reflections.Reflections;
@@ -7,8 +9,6 @@ import org.reflections.scanners.SubTypesScanner;
 import org.reflections.util.ClasspathHelper;
 import org.reflections.util.ConfigurationBuilder;
 import org.reflections.util.FilterBuilder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.boot.Banner;
 
 import java.util.LinkedHashMap;
@@ -21,16 +21,13 @@ import java.util.Set;
  * @author Misagh Moayyed
  * @since 5.1.0
  */
-public final class CasEmbeddedContainerUtils {
+@Slf4j
+@UtilityClass
+public class CasEmbeddedContainerUtils {
     /**
      * Property to dictate to the environment whether embedded container is running CAS.
      */
     public static final String EMBEDDED_CONTAINER_CONFIG_ACTIVE = "CasEmbeddedContainerConfigurationActive";
-
-    private static final Logger LOGGER = LoggerFactory.getLogger(CasEmbeddedContainerUtils.class);
-
-    private CasEmbeddedContainerUtils() {
-    }
 
     /**
      * Gets runtime properties.
@@ -66,7 +63,7 @@ public final class CasEmbeddedContainerUtils {
         try {
             final Class<? extends AbstractCasBanner> clz = subTypes.iterator().next();
             LOGGER.debug("Created banner [{}]", clz);
-            return clz.newInstance();
+            return clz.getDeclaredConstructor().newInstance();
         } catch (final Exception e) {
             LOGGER.error(e.getMessage(), e);
         }
